2007-04-17  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/composition.py:
	(TimelineComposition.movesource): Clamp new positions values, and fixup
	check for same-position-as-before.
	Fixes #420847
	* tests/test_timeline_composition.py:
	Add unit tests for same position moves, and insane values of new
	positions.

2007-04-13  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/composition.py:
	Adjust the new position of the source when moving it further in time
	only.
	Fixes #416702
	* tests/test_timeline_composition.py:
	Unit tests for composition.moveSource().

2007-04-13  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/source.py:
	initialize media-start and media-duration to -1 so we properly set the
	values on the gnlobject the first time round.

2007-04-13  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/composition.py:
	Fix removal of linked sources.
	Raise an exception if we try to remove a source while collapsing the
	neighbours but not removing the linked object.
	* pitivi/timeline/source.py:
	Give a better name to brothers of TimelineFileSource to make it easier
	to spot them in debug logs.
	* tests/common.py:
	Allow setting durations on TestFileSourceFactory, with a default of 1s.
	* tests/test_timeline_composition.py:
	Added tests for insertSourceAfter, prependSource and removeSource

2007-04-10  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/composition.py:
	Fixup and document Composition.appendsource()
	Minor cleanups
	* pitivi/ui/sourcefactories.py:
	Make the explanation text centered.
	* tests/common.py:
	Add a few things to TestFileSourceFactory.__init__
	* tests/test_timeline_composition.py:
	New test file for pitivi.timeline.composition behaviour.

2007-04-04  Edward Hervey  <edward@fluendo.com>

	* tests/common.py:
	Some systems/python don't like doing in-depth import.

2007-03-31  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/source.py: